...
                }
            )
        },
        floatingActionButton = {
            FloatingActionButton(
                onClick = onNavigateToCreateCard,
                modifier = Modifier.testTag("CreateCardFab")
            ) {
                Icon(Icons.Filled.Add, contentDescription = stringResource(id = R.string.card_management_create_new_card_cd)) // Updated
            }
        }
    ) { paddingValues ->
        Column(modifier = Modifier
...
            TextField(
                value = uiState.searchQuery,
                onValueChange = { viewModel.updateSearchQuery(it) },
                modifier = Modifier
                    .fillMaxWidth()
                    .padding(16.dp)
                    .testTag("SearchTextField"),
                label = { Text(stringResource(id = R.string.card_management_search_label)) }, // Updated
                leadingIcon = { Icon(Icons.Filled.Search, contentDescription = stringResource(id = R.string.card_management_search_icon_cd)) }  // Updated
            )

            // Sort Options
            SortOptionsRow(
...
